Add solution and some of test